--- a/packages/my-own-web/src/generators/preset/files/src/index.ts.template
+++ b/packages/my-own-web/src/generators/preset/files/src/index.ts.template
@@ -1,1 +1,24 @@
 const variable = "<%= name %>";
+
+import "./style.css";
+
+document.addEventListener("DOMContentLoaded", () => {
+  document.querySelector<HTMLDivElement>("#app")!.innerHTML = `
+  <div>
+    <h1>Vite + TypeScript</h1>
+    <div class="card">
+      <button id="counter" type="button"></button>
+    </div>
+    <p class="read-the-docs">
+      Click on the Vite and TypeScript logos to learn more
+    </p>
+  </div>
+`;
+
+  const counter = document.querySelector<HTMLButtonElement>("#counter")!;
+  let count = 0;
+  counter.textContent = count.toString();
+  counter.addEventListener("click", () => {
+    counter.textContent = (++count).toString();
+  });
+});
